feat(auth): adding user endpoint to auth against oauth (AEROGEAR-9033)
