# api/swagger.yaml
@@ -62,6 +62,17 @@ definitions:
         x-go-name: VersionID
     type: object
     x-go-package: github.com/aerogear/mobile-security-service/pkg/models
+  User:
+    description: User is the model struct for users
+    properties:
+      email:
+        type: string
+        x-go-name: Email
+      username:
+        type: string
+        x-go-name: Username
+    type: object
+    x-go-package: github.com/aerogear/mobile-security-service/pkg/models
   Version:
     description: Version model
     properties:
@@ -261,6 +272,18 @@ paths:
         "200":
           description: successful operation
       summary: Check if the server is running
+  /user:
+    get:
+      description: Returns user
+      operationId: getUser
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: sucessful operation
+        "404":
+          description: No user found
+      summary: Retrieve user
 produces:
 - application/json
 schemes:
